--- a/css/app.css
+++ b/css/app.css
@@ -137,7 +137,7 @@ p + p {
 
 .tt-query {
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -moz-box-shadow: inset 0 1px 1px rgbgit a(0, 0, 0, 0.075);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
@@ -223,11 +223,8 @@ p + p {
     width: 24.5px;
 }
 
-
-
-
 .selection
-.scolling {
+.scrolling {
     font-size: 0.75em;
 }
 
